migration-assessment/kubernetes/network/allow-app-to-database.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-to-database
  namespace: radiant-petclinic
spec:
  podSelector:
    matchLabels:
      app: demo-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: radiant-petclinic
      ports:
        - protocol: TCP
          port: 5432
