migration-assessment/kubernetes/network/allow-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-ingress
  namespace: radiant-petclinic
spec:
  podSelector:
    matchLabels:
      app: radiant-petclinic

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx

  policyTypes:
    - Ingress
