migration-assessment/kubernetes/network/allow-radiant-petclinic-egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-radiant-petclinic-egress
  namespace: radiant-petclinic
spec:
  podSelector:
    matchLabels:
      app: radiant-petclinic
  policyTypes:
    - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: demo-db
    ports:
    - protocol: TCP
      port: 5432# Allow all outbound traffic from the PetClinic app pods

  - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
    ports:
      - protocol: UDP
        port: 53
