migration-assessment/kubernetes/network/default-deny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: radiant-petclinic
spec:
  podSelector: {}

  policyTypes:
    - Ingress
    - Egress
